--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.372" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/stutBut"
         android:layout_width="296dp"
         android:layout_height="75dp"
         android:text="Student"
