--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,13 @@
         app:layout_constraintVertical_bias="0.074" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/but1"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="@font/poppins_extrabold"
-        android:text="Host"
+        android:text="Teacher"
         android:textColorLink="#2196F3"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -38,34 +39,37 @@
         app:layout_constraintVertical_bias="0.426" />
 
     <Button
-        android:id="@+id/stutBut"
+        android:id="@+id/but2"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="244dp"
         android:backgroundTint="@color/black"
         android:fontFamily="@font/poppins_extrabold"
         android:text="Student"
+        android:textColor="@color/white"
         android:textColorLink="#2196F3"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/b1"
         app:layout_constraintVertical_bias="0.32" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/poppins_extrabold"
         android:text="AttendEase"
         android:textColor="#FF9800"
         android:textColorLink="#F3EDED"
         android:textSize="32sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/b1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.316" />
