--- a/app/src/main/res/layout/activity_create_qr.xml
+++ b/app/src/main/res/layout/activity_create_qr.xml
@@ -5,10 +5,22 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_margin="40dp"
-    android:layout_gravity="center"
+    android:background="@drawable/loginbgportrait"
+    android:gravity="center"
     android:layout_height="match_parent"
     tools:context=".Create_QR">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="20dp"
+        android:layout_margin="20dp"
+        android:minHeight="400dp"
+        app:cardCornerRadius="40dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +47,7 @@
             android:ems="10"
             android:layout_margin="20dp"
             android:hint="Enter Subject...."
-            android:inputType="time"
+            android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -51,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Time :"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:layout_margin="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,13 +82,14 @@
             android:visibility="gone" />
 
 
-        <Button
+        <TextView
             android:id="@+id/btnSelectTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="Select time"
             android:backgroundTint="@color/black"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             android:layout_margin="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,14 +111,14 @@
             android:textStyle="bold"
             android:textSize="24dp"
             android:visibility="visible" />
-        <Button
+        <TextView
             android:id="@+id/btnSelectTime2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
-            android:backgroundTint="@color/black"
-            android:textColor="@color/white"
+            android:text="Select End Time"
+            android:textColor="@color/black"
             android:layout_margin="20dp"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.564"
@@ -139,5 +152,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.635" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
