--- a/app/src/main/res/layout/activity_home_page_teacher.xml
+++ b/app/src/main/res/layout/activity_home_page_teacher.xml
@@ -3,18 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@drawable/loginbgportrait"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home_Page_Teacher">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Welcome to \n AttendEase"
+        android:textSize="34dp"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="139dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:fontFamily="@font/poppins_extrabold"/>
 
     <Button
         android:id="@+id/button"
         android:layout_width="251dp"
         android:layout_height="55dp"
+        android:textStyle="bold"
+        android:textSize="24dp"
         android:text="Create a QR code"
+        android:backgroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.448" />
+        app:layout_constraintVertical_bias="0.539" />
 </androidx.constraintlayout.widget.ConstraintLayout>
